--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/trippingcoin/WEB#readme",
   "dependencies": {
-    "bcryptjs": "^3.0.1",
-    "body-parser": "^1.20.3",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1"
