--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1"
