--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/final
+MONGO_URI=mongodb+srv://tolybaianar05:789456123@web2.tbxl6.mongodb.net/?retryWrites=true&w=majority&appName=WEB2
 JWT_SECRET=your_secret_key
 PORT=8000
